[project]
name = "image-filters"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "matplotlib>=3.10.6",
    "numba>=0.62.0",
    "numpy>=2.3.3",
    "pillow>=11.3.0",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
]
